# ProgramacionLogicaFuncional

./: Ejercicioshaskell0.hs  Problemas.hs  README.md  ejercicios con haskell.hs  fizzbuzz.hs
Bowling/: Bowling.cabal
Bowling/src/: Bowling.hs
Bowling/test/: Main.hs
Ejercicios en haskell 2/: problema1.hs  problema2.hs  problema3.hs  problema4.hs  problema5.hs
FizzBuzz/: FizzBuzz.cabal  LICENSE
FizzBuzz/src/: FizzBuzz.hs
FizzBuzz/test/: Main.hs  Tests.hs
