cabal-version:      3.0
name:               Bowling
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Julio Lara
maintainer:         s21120175@alumnos.itsur.edu.mx
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Bowling
    -- other-modules:
    -- other-extensions:
    build-depends:
        base >= 4.14 && < 5,
        tasty >= 1.5,
        tasty-hunit >= 0.10.1
  hs-source-dirs:  src
  default-language: Haskell2010

test-suite Bowling-test
    import:           warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
  build-depends:
        base,
        Bowling,
        tasty,
        tasty-hunit
