cabal-version:      3.0
name:               FizzBuzz
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Josué Almanza Martinez
maintainer:         josue.almanza@hotmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib, FizzBuzz
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    build-depends: base
                , tasty
                , tasty-hunit
                , FizzBuzz
    main-is: Tests.hs
    default-language: Haskell2010
